# flagella-blueprint

./: README.md  pyproject.toml
demo/: demo_report.py  report.html
flagella_blueprint/: __init__.py  composites.py  processes.py
tests/: test_composites.py  test_processes.py
